auth added + userservice secured
Committer: Mari <mari@mari.ru>
