# docs/users/swagger.json
@@ -8,6 +8,37 @@
         "version": "1.0"
     },
     "paths": {
+        "/api/auth": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Аутентификация",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Auth",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
         "/api/v1/users": {
             "post": {
                 "consumes": [
@@ -53,6 +84,15 @@
                     "users"
                 ],
                 "summary": "Получить список всех пользователей",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Auth",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -87,6 +127,13 @@
                         "description": "Имя пользователя",
                         "name": "full_name_prefix",
                         "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Auth",
+                        "name": "Authorization",
+                        "in": "header",
                         "required": true
                     }
                 ],
@@ -124,6 +171,13 @@
                         "description": "Логин",
                         "name": "username",
                         "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Auth",
+                        "name": "Authorization",
+                        "in": "header",
                         "required": true
                     }
                 ],
@@ -168,6 +222,13 @@
                         "schema": {
                             "$ref": "#/definitions/models.User"
                         }
+                    },
+                    {
+                        "type": "string",
+                        "description": "Auth",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -196,6 +257,13 @@
                         "description": "Логин",
                         "name": "username",
                         "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Auth",
+                        "name": "Authorization",
+                        "in": "header",
                         "required": true
                     }
                 ],
